# SoftwareProject

./: .gitignore
FinalProject/: CMakeLists.txt  ChessGUICommon.c  ChessGUICommon.h  ChessLoadButton.c  ChessLoadButton.h  ChessMainWindow.c  ChessMainWindow.h  ChessNewGameButton.c  ChessNewGameButton.h  ChessParser.c  ChessParser.h  ChessQuitButton.c  ChessQuitButton.h  ChessWidget.c  ChessWidget.h  ChessWindow.c  ChessWindow.h  GameBoard.c  GameBoard.h  GameFlowHelper.c  GameFlowHelper.h  GameSettings.c  GameSettings.h  GameState.c  GameState.h  MainAux.c  MainAux.h  MiniMax.c  MiniMax.h  Moves.c  Moves.h  chessprog  consoleUI.c  consoleUI.h  main.c  makefile  slot1.xml   slot2.xml   stuff.txt  xmlGame.c  (+1 more)
FinalProject/graphics/: ChessButton.c  ChessButton.h  ChessGUICommon.h  ChessGUIManager.c  ChessGUIManager.h  ChessGameWindow.c  ChessGameWindow.h  ChessLoadWindow.c  ChessLoadWindow.h  ChessMainWindow.c  ChessMainWindow.h  ChessPiece.c  ChessPiece.h  ChessRect.c  ChessRect.h  ChessSaveWindow.c  ChessSaveWindow.h  ChessSettingsWindow.c  ChessSettingsWindow.h  ChessWindow.h
FinalProject/tests/: GameBoardTest.c  GameBoardTest.h  MiniMaxTest.c  MiniMaxTest.h  MovesTest.c  MovesTest.h  consoleUITest.c  consoleUITest.h  xmlTest.h
HW1/: CMakeLists.txt  main.c
HW2/: CMakeLists.txt  main.c  main_aux.c  main_aux.h  nim  sp_nim.c  sp_nim.h
HW3/: CMakeLists.txt  SPArrayList.c  SPArrayList.h  SPArrayListUnitTest.c  SPFIAR  SPFIARGame.c  SPFIARGame.h  SPFIARGameUnitTest.c  SPFIARParser.c  SPFIARParser.h  SPFIARParserUnitTest.c  SPMainAux.c  SPMainAux.h  SPMiniMax.c  SPMiniMax.h  SPMiniMaxNode.c  SPMiniMaxNode.h  main.c
